--- a/gallery/static/scss/_slideshow.scss
+++ b/gallery/static/scss/_slideshow.scss
@@ -86,6 +86,10 @@
     transition: background 0.5s ease-in-out;
     width: 90%;
     z-index: 10;
+
+    .play-pause {
+      display: inline-flex;
+    }
   }
 
   &.prev {
@@ -120,8 +124,9 @@ button {
   background: transparent;
   border: 0;
   cursor: pointer;
-  height: 5rem;
-  width: 5rem;
+  height: 100%;
+  max-height: 5rem;
+  max-width: 5rem;
 
   &.hidden {
     display: none;
@@ -130,7 +135,7 @@ button {
   svg {
     aspect-ratio: 1/1;
     pointer-events: none;
-    width: 8vw;
+    width: 5vw;
   }
 
   path {
