--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -11,6 +11,7 @@ body {
 
 html {
   font-size: 16px;
+  text-rendering: optimizeLegibility;
 }
 
 body {
@@ -182,6 +183,7 @@ footer {
     align-items: flex-start;
     display: flex;
     flex-flow: row wrap;
+    height: 3.5rem;
     padding: 0;
 
     h1 {
@@ -192,6 +194,8 @@ footer {
       height: 2.5rem;
       justify-content: flex-end;
       margin: 0.5rem;
+      position: fixed;
+      right: 0.25rem;
       text-align: end;
       width: 100%;
     }
