--- a/assets/scss/_slideshow.scss
+++ b/assets/scss/_slideshow.scss
@@ -86,6 +86,10 @@
     transition: background 0.5s ease-in-out;
     width: 90%;
     z-index: 10;
+
+    .play-pause {
+      display: inline-flex;
+    }
   }
 
   &.prev {
@@ -120,7 +124,7 @@ button {
   background: transparent;
   border: 0;
   cursor: pointer;
-  height: 10vh;
+  height: 100%;
   max-height: 5rem;
   max-width: 5rem;
 
@@ -131,7 +135,7 @@ button {
   svg {
     aspect-ratio: 1/1;
     pointer-events: none;
-    width: 8vw;
+    width: 5vw;
   }
 
   path {
@@ -158,6 +162,8 @@ button {
     .featured-images {
       height: 65vh;
       min-height: 30rem;
+      width: 100%;
+      overflow: hidden;
     }
 
     .featured-image {
@@ -181,8 +187,10 @@ button {
 
     img {
       height: auto;
-      // min-height: 100%;
+      image-rendering: optimizequality;
+      object-fit: cover;
       position: absolute;
+      max-height: 150%;
       max-width: 150%;
       min-width: 100%;
     }
