--- a/gallery/static/scss/style.scss
+++ b/gallery/static/scss/style.scss
@@ -8,5 +8,6 @@
 @import './featured_series';
 @import './focal_points';
 @import './full-image';
+@import './page';
 @import './modal';
 @import './zoom';
