--- a/gallery/templates/series.html
+++ b/gallery/templates/series.html
@@ -1,5 +1,21 @@
 {% extends "base.html" %}
 {% load static %}
 {% block main_content %}
+  <a href="/artwork" class="page__back-link">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      version="1.1"
+      id="mdi-chevron-left"
+      width="128"
+      height="128"
+      viewBox="0 0 24 24"
+      fill="currentColor"
+    >
+      <path d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z" />
+    </svg>
+    Back to Artwork
+  </a>
+
   {% include "partials/_image_grid.html" with series=series images=series_images series=False %}
 {% endblock %}
