--- a/assets/scss/_zoom.scss
+++ b/assets/scss/_zoom.scss
@@ -15,7 +15,7 @@
     position: absolute;
     top: 0;
     transition: opacity 0.1s ease;
-    width: 30%;
+    width: 15rem;
     z-index: 99;
   }
 
