--- a/gallery/static/css/style.css
+++ b/gallery/static/css/style.css
@@ -668,8 +668,14 @@ button:hover path {
   height: auto;
   min-height: 100%;
   min-width: 100%;
+  opacity: 0;
   position: absolute;
   width: auto;
+}
+
+.loaded .image-grid__image {
+  opacity: 1;
+  transition: opacity 1.5s ease-in-out;
 }
 
 @media screen and (width <= 48rem) {
