--- a/gallery/static/scss/_image-grid.scss
+++ b/gallery/static/scss/_image-grid.scss
@@ -82,9 +82,15 @@
     height: auto;
     min-height: 100%;
     min-width: 100%;
+    opacity: 0;
     position: absolute;
     width: auto;
   }
+}
+
+.loaded .image-grid__image {
+  opacity: 1;
+  transition: opacity 1.5s ease-in-out;
 }
 
 @media screen and (width <= 48rem) {
