Fix hover animation

--- a/gallery/static/css/style.css
+++ b/gallery/static/css/style.css
@@ -640,7 +640,7 @@ button:hover path {
   backdrop-filter: blur(0.025rem);
   box-sizing: border-box;
   color: #fff;
-  display: none;
+  display: block;
   font-size: 1.25rem;
   font-weight: 400;
   height: 100%;
@@ -649,6 +649,7 @@ button:hover path {
   letter-spacing: 0.05rem;
   line-height: 2;
   min-height: 2rem;
+  opacity: 0;
   padding: 3rem 0.5rem 0.5rem 0.5rem;
   position: absolute;
   text-align: center;
@@ -656,12 +657,12 @@ button:hover path {
   text-shadow: 4px 6px 6px rgba(0, 0, 0, 0.66);
   text-transform: uppercase;
   top: 0;
-  transition: background backdrop-filter 0.5s ease-in-out;
+  transition: opacity 0.25s ease-in-out, backdrop-filter 0.5s ease-in-out;
   width: 100%;
   z-index: 5;
 }
 .image-grid .image-grid__link:hover .image-grid__title, .image-grid .image-grid__link:focus .image-grid__title {
-  display: block;
+  opacity: 1;
 }
 .image-grid .image-grid__image {
   background-color: #000;
