--- a/gallery/static/scss/_image-grid.scss
+++ b/gallery/static/scss/_image-grid.scss
@@ -59,6 +59,7 @@
       min-height: 2rem;
       opacity: 0;
       padding: 3rem 0.5rem 0.5rem 0.5rem;
+      pointer-events: none;
       position: absolute;
       text-align: center;
       text-decoration: none;
