--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -45,7 +45,7 @@
   </head>
   <body class="{% block body_class %}{% endblock %}" bgcolor="#000000">
     <header role="header">
-      <h1>Tina Bell Vance</h1>
+      <h1><a href="/">Tina Bell Vance</a></h1>
       {% include "partials/_navigation.html" %}
     </header>
 
